--- a/src/main/resources/templates/template/todo/update.html
+++ b/src/main/resources/templates/template/todo/update.html
@@ -9,14 +9,17 @@
         <label for="todoContent" class="h4">Todo Content</label>
         <input type="text" class="form-control" id="todoContent" th:value="${content}" name="content">
     </div>
-    <select class="form-select" aria-label="Default select example">
-        <option th:each="cp: ${containedProjects}" th:value="${cp.title}" th:text="${cp.title}"
-                ></option>
-<!--        <option th:each="cp: ${ccontainedProjects}" th:value="${cp.title}" th:text="${cp.title}"-->
-<!--                th:selected="${cp.id==project.id}"></option>-->
-    </select>
+    <div class="container-fluid mb-3">
+        <h4>Related Project</h4>
+        <select class="form-select" aria-label="Default select example" name="selectedProjectId">
+            <option th:each="cp: ${containedProjects}" th:value="${cp.id}" th:text="${cp.title}"
+            ></option>
+<!--            <option value="-1">No Project</option>-->
+        </select>
+    </div>
+
     <button type="submit" class="btn btn-primary">update</button>
-    <a class="btn btn-primary" th:href="@{/project/{id}/detail(id=${id})}" role="button">back</a>
+    <a class="btn btn-primary" th:href="@{/todo/{id}/detail(id=${id})}" role="button">back</a>
 </form>
 </body>
 </html>
